--- a/Projekt_Fronted/css/style.css
+++ b/Projekt_Fronted/css/style.css
@@ -1,104 +1,102 @@
-
 a {  
-	padding: 0px 0px 0px 50px;
-	margin: 0px 0px 0px 50px;
+	padding: 0px 50px 0px 0px;
+	margin: 0px 0px 0px 0px;
 	color: #000000;
 	text-decoration: none;
-	font-size: 45px;
-	
+	font-size: 30px;
 }
 
 a:hover {
-	color: rgb(47, 201, 0);
+	color: rgba(214, 151, 57, 0.904);
 	text-decoration: none
 }
 
 body {
-	font-family: Cambria;
+	font-family: Verdana;
 	font-size: 12px;
 	color: #000000;
 	text-align: center;
 	background: #abb4b84b;
 }
 
+.dark-mode {
+	background-color: rgba(48, 37, 37, 0.863);
+	color: white;
+	text-decoration: none
+}
+
+.dark-mode a {
+	color: white;
+	text-align: left;
+}
+
 #container {
 	width: 920px;
-	margin: 0 auto;
+	margin: auto;
 	text-align: left;
 }
 
 #header_logo {
 	float: left;
-	margin: 10px 0px;
+	margin: 0px 0px 0px 0px;
 	width: 100%;
 	height: 60px;
 }
 
+
 #login_1 {
 	float: right;
-	margin-top: 0px;
+	margin: 0px;
+	margin-bottom: 0px;
+	margin-right: 10px;
+	font-size: 10px;
+}
+
+#login_1 a{
+	float: right;
+	margin: 0px;
+	margin-bottom: 0px;
+	font-size: 15px;
 }
 
 #login_1 ul {
 	list-style: none;
 }
 
-#login_1 a {
-	background-color: #ac7d7d6e ;
-}
-#login_1 a {
-	padding: 0px 0px 0px 0px;
-	margin: 0px px 0px 0px;
-	color: #000000;
-	display: block;
-	text-decoration: none;
-	text-transform: capitalize;
-	font-size: 13px;
-}
 
 #login_1 a:hover {
-	color: rgb(47, 201, 0);
+	color: rgba(214, 151, 57, 0.904);
 	text-decoration: none;
 }
-
 
 #login_2 {
 	float: right;
 	margin-top: 0px;
+	margin-bottom: 25px;
+	font-size: 10px;
 }
+
+#login_2 a{
+	float: right;
+	margin-top: 0px;
+	margin-bottom: 25px;
+	font-size: 15px;
+}
+
 
 #login_2 ul {
 	list-style: none;
 }
 
-#login_2 a {
-	background-color: #ac7d7d6e ;
-}
-
-#login_2 a {
-	padding: 0px 0px 0px 0px;
-	margin: 0px 0px 50px 50px;
-	color: #000000;
-	display: block;
-	text-decoration: none;
-	text-transform: capitalize;
-	font-size: 13px;
-}
-
 #login_2 a:hover {
-	color: rgb(47, 201, 0);
+	color: rgba(214, 151, 57, 0.904);
 	text-decoration: none;
 }
 
-
-#header_menu {
-	float: left;
-	margin-top: 30px;
-}
 
 #header_menu ul {
 	list-style: none;
-	margin: 10px;
+	margin: 0px;
 	padding: 0px 0px 0px 0px;
 }
 
@@ -106,45 +104,164 @@ body {
 	display: block;
 	float: left;
 }
-#header_menu {
-	background-color: #72dddd56 ;
-	padding: 8px 150px 15px 10px;
-	margin: 0px 40px 0px 6px;
+
+#header_menu a{
+	font-size: 20px;
 }
 
-#header_menu a {
-	margin: 0px 30px 0px 0px;
+#header_menu  {
+	float: left;
+	padding: 0px 0px 0px 0px;
+	margin: 30px 0px 30px 0px;
 	color: #000000;
 	text-decoration: none;
 	text-transform: capitalize;
-	font-size: 28px;
 }
 
 #header_menu a:hover {
-	color: rgb(47, 201, 0);
+	color: rgba(214, 151, 57, 0.904);
+}
+.dark-mode {
+	color: white;
 }
 
-#banner
-	
-
-}
 
 #footer {
-    margin-top: 180px;
+    margin-top: 50px;
     display: flex;
     justify-content: center;
-    line-height: 18px;
+	line-height: 18px;
+	color: black;
 }
 
 #footer a{
     text-decoration: none;
-    font-size: 18px;
+	font-size: 18px;
 }
 
 
 #footer a :hover {
-    color: rgb(47, 201, 0);
+	color: rgba(214, 151, 57, 0.904);
     text-decoration: underline;
 }
 
-	
+.dark-mode a:hover {
+	color: rgba(214, 151, 57, 0.904);
+    text-decoration: underline;
+}
+
+
+* {box-sizing:border-box}
+
+/* Slideshow */
+#slideshow {
+  max-width: 800px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+#mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+#prev {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: 40px;
+  padding: 16px;
+  font-weight: bold;
+  transition: 0.6s ease;
+  border-radius: 0px 3px 3px 0;
+  user-select: none;
+}
+
+#next {
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	margin-top: 40px;
+	padding: 16px;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
+  }
+
+
+/* The dots/bullets/indicators */
+#dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0px 2px 0px 0px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+#active
+.dot:hover {
+	background-color: #717171;
+}
+  
+
+/* Fading animation */
+#fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+
+
+
+#image {
+	margin-top: 180px;
+	width: 80%;
+	height: 210px;
+	display: flex;
+	justify-content: center;
+}
+
+
+#map {
+	margin-top: 80px;
+	margin-bottom: 80px;
+	display: flex;
+	justify-content: flex-start;
+	padding-left: 120px;
+}
+
+
+#contacts a {
+	text-decoration: none;
+	font-size: 80px;
+	justify-content: flex-end;
+	padding-right: 120px;
+}
+
+
+#contacts a :hover {
+	color: rgba(214, 151, 57, 0.904);
+	text-decoration: underline;
+}
+
